@@ -83,6 +83,8 @@ print Wikibase::Datatype::Print::Statement::print($obj, {
 # P31 (instance of): Q5 (normal)
 #  P642: Q474741
 # References:
-#   P248 (stated in): Q53919
-#   P214 (VIAF ID): 113230702
-#   P813 (retrieved): 07 December 2013 (Q1985727)
+#   {
+#     P248 (stated in): Q53919
+#     P214 (VIAF ID): 113230702
+#     P813 (retrieved): 07 December 2013 (Q1985727)
+#   }
