@@ -102,9 +102,11 @@ is_deeply(
 		'P11: 1.1 (normal)',
 		' P642: Q474741',
 		'References:',
-		'  P248: Q53919',
-		'  P214: 113230702',
-		'  P813: 07 December 2013 (Q1985727)',
+		'  {',
+		'    P248: Q53919',
+		'    P214: 113230702',
+		'    P813: 07 December 2013 (Q1985727)',
+		'  }',
 	],
 	'Get printed value.',
 );
