@@ -2,6 +2,8 @@
  - Add doc for Wikibase::Datatype::Print::MediainfoSnak.
  - Add doc for Wikibase::Datatype::Print::Snak.
  - Add doc for Wikibase::Datatype::Print::Statement.
+ - Fix printing of multiple references. Each reference is in '{' and '}'
+   block.
 
 0.06 2023-04-15T18:46:48+02:00
  - Add doc for Wikibase::Datatype::Print::Sitelink.
